sending admin welcome email

--- a/src/email-templates/welcome-admin/welcome-admin.ejs.html
+++ b/src/email-templates/welcome-admin/welcome-admin.ejs.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>
-    Welcome Nazir Mudumane
+    Welcome Nairo Mudumane
   </title>
 
   <style>
@@ -180,21 +180,21 @@
 
   <div class="root-wrapper mx-auto">
     <h1 class="text-sm">Hello,<span class="mr-1 blue-1">
-        Nazir Mudumane
+        Nairo Mudumane
       </span>
     </h1>
     <div class="blue-2 text-lg font-bold">We are happy to have you onboard!</div>
 
     <div class="mt-10">
-      <p>You now have super admin access, which allows you to do a lot of things like make a user admin and
-        so on...</p>
+      <p>You now have admin access, which allows you to do a lot of things into our system.</p>
 
       <p>Use this access key to login: <span class="font-bold">
-          VuqFZq
+          EB5bKW
         </span></p>
 
-      <p>For better security, we generate an <span class="font-semibold">access key</span> for you to be
-        able to login for the first time and,
+      <p>
+        For better security, we generate an <span class="font-semibold">access key</span> for you to be able to login
+        for the first time and,
         it should be
         noted that it is <span class="font-semibold">mandatory to choose a strong password on the first login!</span>
       </p>
